[project]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Pratap Singh",email = "adityarhcsa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
poetry-testing = "poetrytest.poetry_testing:main"